--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,7 +18,7 @@
         android:layout_marginEnd="99dp"
         android:layout_marginBottom="312dp"
         android:ems="10"
-        android:hint="Name"
+        android:hint="Username"
         android:inputType="textPersonName" />
 
     <EditText
@@ -33,7 +33,7 @@
         android:layout_marginEnd="99dp"
         android:layout_marginBottom="241dp"
         android:ems="10"
-        android:hint="Password"
+        android:hint="password"
         android:inputType="textPassword" />
 
     <Button
@@ -59,5 +59,19 @@
         android:layout_marginEnd="204dp"
         android:layout_marginBottom="119dp"
         android:text="TextView" />
+
+    <TextView
+        android:id="@+id/registerViewID"
+        android:layout_width="fill_parent"
+        android:layout_height="30dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="70dp"
+        android:gravity="center"
+        android:text="No account yet? Create one"
+        android:textSize="16dip" />
 
 </RelativeLayout>
