--- a/app/src/main/res/layout/product_item_row.xml
+++ b/app/src/main/res/layout/product_item_row.xml
@@ -33,8 +33,8 @@
                     android:layout_marginStart="12dp"
                     android:layout_marginTop="5dp"
                     android:layout_marginEnd="0dp"
-                    android:text="20"
-                    android:textSize="18dp" />
+                    android:text="Nr"
+                    android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/fridgeProductName"
