Adding frame of product creation

--- a/app/src/main/res/layout/activity_create_product.xml
+++ b/app/src/main/res/layout/activity_create_product.xml
@@ -42,7 +42,7 @@
             android:text="Name" />
 
         <TextView
-            android:id="@+id/expirationDateLabel"
+            android:id="@+id/productExpirationDateLabel"
             android:layout_width="wrap_content"
             android:layout_height="46dp"
             android:layout_below="@id/productNameLabel"
@@ -53,21 +53,21 @@
             android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/expirationDate"
+            android:id="@+id/productExpirationDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/productName"
             android:layout_marginTop="6dp"
-            android:layout_toRightOf="@id/expirationDateLabel"
+            android:layout_toRightOf="@id/productExpirationDateLabel"
             android:ems="10"
             android:inputType="date|textPersonName"
             android:text="20/22/1020" />
 
         <TextView
-            android:id="@+id/weightLabel"
+            android:id="@+id/productWeightLabel"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
-            android:layout_below="@id/expirationDateLabel"
+            android:layout_below="@id/productExpirationDateLabel"
             android:layout_marginTop="12dp"
             android:layout_marginBottom="12dp"
             android:ems="5"
@@ -79,9 +79,9 @@
             android:id="@+id/productWeight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/expirationDate"
+            android:layout_below="@id/productExpirationDate"
             android:layout_marginTop="6dp"
-            android:layout_toRightOf="@id/weightLabel"
+            android:layout_toRightOf="@id/productWeightLabel"
             android:ems="10"
             android:inputType="textPersonName"
             android:text="weight GG" />
@@ -90,7 +90,7 @@
             android:id="@+id/productCaloriesLabel"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
-            android:layout_below="@id/weightLabel"
+            android:layout_below="@id/productWeightLabel"
             android:layout_marginTop="6dp"
             android:layout_marginBottom="12dp"
             android:ems="5"
@@ -109,4 +109,10 @@
             android:inputType="textPersonName"
             android:text="Number of calories" />
     </RelativeLayout>
+
+    <Button
+        android:id="@+id/createProductButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Create" />
 </LinearLayout>
