--- a/app/src/main/res/layout/product_item_row.xml
+++ b/app/src/main/res/layout/product_item_row.xml
@@ -58,7 +58,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/expirationDateLabel"
+                    android:id="@+id/productExpirationDateLabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="12dp"
