--- a/app/src/main/res/layout/activity_create_product.xml
+++ b/app/src/main/res/layout/activity_create_product.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/Product Information:"
+        android:id="@+id/ProductInformation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
