--- a/app/src/main/res/layout/activity_recipe_by_id.xml
+++ b/app/src/main/res/layout/activity_recipe_by_id.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".recipe.RecipeByIdActivity">
+    tools:context=".Recipe.RecipeByIdActivity">
 
     <TextView
         android:id="@+id/recipeName"
