--- a/app/src/main/res/layout/activity_fridge.xml
+++ b/app/src/main/res/layout/activity_fridge.xml
@@ -59,13 +59,31 @@
 
     <Button
         android:id="@+id/addProductButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="140dp"
+        android:layout_height="60dp"
         android:layout_below="@id/productScrollViewId"
-        android:layout_marginStart="24dp"
+        android:layout_marginLeft="48dp"
         android:layout_marginTop="12dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginRight="24dp"
         android:layout_marginBottom="12dp"
         android:text="Add Product" />
+
+    <Button
+        android:id="@+id/createProductButton"
+        android:layout_width="140dp"
+        android:layout_height="60dp"
+        android:layout_below="@id/productScrollViewId"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginRight="12dp"
+        android:layout_marginBottom="12dp"
+        android:layout_toEndOf="@id/addProductButton"
+        android:text="Create Product" />
+
+    <Button
+        android:id="@+id/fridgeReturnButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Return" />
 
 </RelativeLayout>
