--- a/app/src/main/res/layout/activity_fridge.xml
+++ b/app/src/main/res/layout/activity_fridge.xml
@@ -6,21 +6,11 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/tmpTextView"
+        android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
-        android:layout_marginEnd="24dp"
-        android:text="TextView" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tmpTextView"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="12dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="12dp"
         android:gravity="center"
@@ -82,8 +72,11 @@
 
     <Button
         android:id="@+id/fridgeReturnButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="160dp"
+        android:layout_height="60dp"
+        android:layout_below="@id/addProductButton"
+        android:layout_marginLeft="140dp"
+        android:layout_marginTop="20dp"
         android:text="Return" />
 
 </RelativeLayout>
