--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -1,20 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Recipe.RecipeActivity">
 
+    <Button
+        android:id="@+id/returnRecipeId"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="76dp"
+        android:gravity="center"
+        android:text="Return"></Button>
+
+    <Button
+        android:id="@+id/addRecipeId"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_marginLeft="18dp"
+        android:layout_marginEnd="77dp"
+        android:layout_toRightOf="@id/returnRecipeId"
+        android:foregroundGravity="center"
+        android:text="Add Recipe"></Button>
+
     <ListView
         android:id="@+id/listView"
-        android:layout_width="408dp"
-        android:layout_height="719dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_width="match_parent"
+        android:layout_height="673dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="57dp"
+        android:layout_marginBottom="1dp"></ListView>
 
 
-</LinearLayout>
+</RelativeLayout>
