--- a/app/src/main/res/layout/activity_recipe_by_id.xml
+++ b/app/src/main/res/layout/activity_recipe_by_id.xml
@@ -1,48 +1,91 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Recipe.RecipeByIdActivity">
+    android:gravity="center"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/recipeName"
-        android:layout_width="fill_parent"
-        android:layout_height="30dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="42dp"
-        android:layout_marginEnd="57dp"
-        android:layout_marginBottom="514dp"
-        android:gravity="center"
-        android:textSize="16dip" />
-
-    <TextView
-        android:id="@+id/decsriptionRecipe"
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="42dp"
-        android:layout_marginEnd="57dp"
-        android:layout_marginBottom="409dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="12dp"
         android:gravity="center"
-        android:textSize="16dip" />
+        android:text="Recipe:"
+        android:textSize="22sp"
+        android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/productInRecipe"
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="42dp"
-        android:layout_marginEnd="57dp"
-        android:layout_marginBottom="274dp"
-        android:gravity="center"
-        android:textSize="16dip" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="553dp"
+        android:gravity="center_horizontal">
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/productLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="23dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="12dp"
+            android:ems="5"
+            android:text="Products:"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/productInRecipe"
+            android:layout_width="272dp"
+            android:layout_height="192dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="9dp"
+            android:layout_marginBottom="12dp"
+            android:layout_toRightOf="@id/productLabel"
+            android:ems="5"
+            android:textSize="18sp"/>
+
+
+        <TextView
+            android:id="@+id/descriptionLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="46dp"
+            android:layout_below="@id/productLabel"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="23dp"
+            android:layout_marginTop="187dp"
+            android:layout_marginBottom="6dp"
+            android:ems="5"
+            android:text="Description:"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/decsriptionRecipe"
+            android:layout_width="297dp"
+            android:layout_height="331dp"
+            android:layout_below="@id/productInRecipe"
+            android:layout_alignParentEnd="true"
+            android:layout_marginLeft="2dp"
+            android:layout_marginTop="26dp"
+            android:layout_marginEnd="-7dp"
+            android:layout_marginBottom="6dp"
+            android:layout_toRightOf="@id/descriptionLabel"
+            android:ems="5"
+            android:textSize="18sp" />
+
+        <Button
+            android:id="@+id/returnButtonToRecipe"
+            android:layout_width="110dp"
+            android:layout_height="50dp"
+            android:layout_below="@id/descriptionLabel"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginTop="201dp"
+            android:layout_marginEnd="283dp"
+            android:layout_marginBottom="14dp"
+            android:text="Return" />
+
+    </RelativeLayout>
+
+
+</LinearLayout>
