--- a/app/src/main/res/layout/product_dialog.xml
+++ b/app/src/main/res/layout/product_dialog.xml
@@ -1,21 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:foregroundGravity="center_vertical|center"
+    android:orientation="vertical">
 
 
     <TextView
         android:id="@+id/productAdded"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:layout_gravity="end"
+        android:layout_gravity="center|end"
         android:layout_marginBottom="150dp"
+        android:foregroundGravity="center"
         android:freezesText="false"
         android:gravity="center"
-        android:text="Product Added Sucessfully"
+        android:text="You Sucessfully Conducted Operation"
         android:textAllCaps="true"
         android:textColor="#E07AAE"
         android:textSize="30sp"
         android:textStyle="bold" />
 
-</LinearLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
