--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="12dp"
         android:ems="10"
@@ -19,15 +19,41 @@
         android:inputType="textPersonName"
         android:textSize="18sp" />
 
-    <Button
-        android:id="@+id/searchButton"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginRight="50dp"
-        android:layout_marginBottom="12dp"
-        android:text="Search" />
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/addProductReturnButton"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|center_horizontal"
+            android:layout_marginLeft="50dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginBottom="12dp"
+            android:foregroundGravity="center"
+            android:gravity="center"
+            android:text="Return" />
+
+        <Button
+            android:id="@+id/searchButton"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginRight="40dp"
+            android:layout_marginBottom="12dp"
+            android:foregroundGravity="center"
+            android:text="Search" />
+
+
+
+    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/addProductRecycleView"
@@ -39,16 +65,5 @@
         android:layout_marginBottom="12dp">
 
     </androidx.recyclerview.widget.RecyclerView>
-
-    <Button
-        android:id="@+id/addProductReturnButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginBottom="12dp"
-        android:text="Return" />
 
 </LinearLayout>
